Revert "fix: vertically align hero text and image"
This reverts commit 7468c6ca3962eb197bf7de642840e824128619e8.

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -49,11 +49,6 @@
   width: 100% !important;
 }
 
-.VPHero .main {
-  display: flex !important;
-  align-items: center !important;
-}
-
 
 /* Premium nav */
 .VPNav {
